# sge-to-slurm

./: HANDOFF.md  README.md  pyproject.toml  sge_to_slurm.example.yaml  sge_to_slurm.scc.yaml
module_installation/: README.md  install_scc_module.sh  modulefile.lua
references/: README.md  man_qsub.txt  sbatch.1
references/techweb/: Advanced Batch System Usage.md  Batch Script Examples.md  Running Parallel Batch Jobs.md
src/sge_to_slurm/: body.py  cli.py  config.py  converter.py  directives.py  io_util.py  models.py  report.py
tests/: conftest.py  test_cli.py  test_converter.py  test_io_util.py
tests/fixtures/sge/: basic.sh  basic_slurm.sh  with_mpi.sh
